--- a/proceso.html
+++ b/proceso.html
@@ -1,88 +1,112 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bitlab</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.fullPage.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
-	<script src="assets/javascript/fullPageInitializer.js"></script>
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	<link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
+ <title>Bitlab</title>
+ <meta charset="UTF-8">
+ <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script type="text/javascript" src="jquery.fullPage.js"></script>
+ <link rel="stylesheet" type="text/css" href="css/main.css" />
+ <script src="assets/javascript/fullPageInitializer.js"></script>
+ <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+ <link href='https://fonts.googleapis.com/css?family=Volkhov:400italic|Nunito:300' rel='stylesheet' type='text/css'>
+ <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
 </head>
 
 <body>
-	<div class="slidebar">
-			<div class="menu-container">
-				<p>Menú</p>
-				<ul>
-					<li><a href="daniel.html #main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-					<li><a href="daniel.html #services" onclick="toggleMenu()"><span>Servicios</span></a></li>
-					<li><a href="#" onclick="toggleMenu()"><span>Proceso</span></a></li>
-					<li><a href="daniel.html #us" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-					<li><a href="daniel.html #clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
-					<li><a href="#" onclick="toggleMenu()"><span>Contacto</span></a></li>
-				</ul>
-			</div>
-		</div>
-		
-		<div>
-			<a href="daniel.html #main"><img class="logo" src="img/bitlab.png"></a>
-			<img class="menu" src="img/menu.png" onclick="toggleMenu()">
-		</div>
-<!--Main-->
-		<div id="fullpage">
-			<div class="section mainproceso">
-	 			<h1>Conoce nuestro proceso de trabajo</h1>
-	 			<a href="#procesocontent">
-					<img class="arrow" src="img/flecha.png"/>
-	 			</a>
-			</div>
-<!--Proces-->
-			<div class="section procesocontent" data-anchor="procesocontent">
-			 	<div class="center">
-			 		<h3>Consultoría sin costo ni obligaciones.</h3>
-					<h4>El camino al éxito</h4>
-					<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</div>
-				</div>
-		 	</div>
-<!--Pasos-->
-			<div class="section pasos">
-				<div class="h-center">
-					<img class="ilust" src="img/descubrir.png"/>
-					<div class="contentpasos">
-					<h3>Consultoría sin costo ni obligaciones.</h3>
-					<h4>El camino al éxito</h4>
-					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-					</div>
-				</div>
-				<div class="h-center">
-					<div class="contentpasos">
-					<h3>Consultoría sin costo ni obligaciones.</h3>
-					<h4>El camino al éxito</h4>
-					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-					</div>
-					<img class="ilust" src="img/diseñar.png"/>
-				</div>
-				<div class="h-center">
-					<img class="ilust" src="img/desarrollo.png"/>
-					<div class="contentpasos">
-					<h3>Consultoría sin costo ni obligaciones.</h3>
-					<h4>El camino al éxito</h4>
-					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-					</div>
-				</div>
-				<div class="h-center">
-					<div class="contentpasos">
-					<h3>Consultoría sin costo ni obligaciones.</h3>
-					<h4>El camino al éxito</h4>
-					<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
-					</div>
-					<img class="ilust" src="img/celebrar.png"/>
-				</div>
-			</div>
-		</div>
+ <div class="slidebar">
+  <div class="menu-container">
+   <p>Menú</p>
+   <ul>
+    <li><a href="daniel.html #main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
+    <li><a href="daniel.html #services" onclick="toggleMenu()"><span>Servicios</span></a></li>
+    <li><a href="#" onclick="toggleMenu()"><span>Proceso</span></a></li>
+    <li><a href="daniel.html #us" onclick="toggleMenu()"><span>Nosotros</span></a></li>
+    <li><a href="daniel.html #clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
+    <li><a href="#" onclick="toggleMenu()"><span>Contacto</span></a></li>
+   </ul>
+  </div>
+ </div>
+
+ <div>
+  <a href="daniel.html #main"><img class="logo" src="img/bitlab.png"></a>
+  <img class="menu" src="img/menu.png" onclick="toggleMenu()">
+ </div>
+ <!--Main-->
+ <div id="fullpage">
+  <div class="section mainproceso">
+   <h1>Conoce nuestro proceso de trabajo</h1>
+   <a href="#procesocontent">
+    <img class="arrow" src="img/flecha.png"/>
+   </a>
+  </div>
+  <!--Proces-->
+  <div class="section procesocontent" data-anchor="procesocontent">
+   <div class="center">
+    <h3>Consultoría sin costo ni obligaciones.</h3>
+    <h4>El camino al éxito</h4>
+    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
+   </div>
+  </div>
+  <!--Pasos-->
+  <div class="section pasos">
+   <div class="ilust"><img src="img/descubrir.png"></div>
+   <div class="contentpasos">
+    <h1>01</h1>
+    <h4>Descubrir</h4>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+   </div>
+  </br>
+  <div class="contentpasos">
+   <h1>02</h1>
+   <h4>Diseñar</h4>
+   <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+  </div>
+  <div class="ilust"><img src="img/diseñar.png"></div>
+ </br>
+ <div class="ilust"><img src="img/desarrollo.png"></div>
+ <div class="contentpasos">
+  <h1>03</h1>
+  <h4>Desarrollar</h4>
+  <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+ </div>
+</br>
+<div class="contentpasos">
+ <h1>04</h1>
+ <h4>Celebrar</h4>
+ <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+</div>
+<div class="ilust"><img src="img/celebrar.png"></div>
+</div>
+
+<div class="section contactfull" style="height: 1900px;">
+<div class="contacttext">
+ <h3>Hola</h3>
+ <h4>Hola</h4>
+ <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+</div>
+ <div class="footer">
+  <div class="three">
+   <p class="footer-conocenos">Conócenos</p>
+   <p class="footer-adress"> Piedras Negras #229,
+    Col. Mitras Centro C.P. 64650</p>
+    <p class="footer-tel">+52 (81) 21392290</p>
+    <p class="footer-hola">Dinos Hola!</p>
+    <p class="footer-web">jobs@bitlab.mx</p>
+   </div>
+
+   <div class="three">
+    <p class="footer-rights">2015 - BITLAB - All rights reserved</p>
+   </div>
+
+   <div class="three" style="height: 100%">
+    <a href="https://www.facebook.com/" class="footer-button" target="_blank"><img src="img/facebook.png"></a>
+   </div>
+
+   <div class="three">
+   </div>
+  </div>
+
+ </div>
 </body>
 </html>
