Contacto con formulario y animación

--- a/daniel.html
+++ b/daniel.html
@@ -34,8 +34,17 @@
   <div class="contact-container">
    <h3>Contáctanos</3>
     <h4>say hello!</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h3>info@bitlab.mx</h3>
+    <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    <h3 style="font-size:14px;">info@bitlab.mx</h3>
+    <form action="#">
+     <div class="minform">
+     Nombre: <input type="text"></br>
+     Empresa: <input type="text"></br>
+     E-Mail: <input type="text"></br>
+     Mensaje: <input type="text"></br>
+    </div>
+     <input type="submit" class="buttonform">
+    </form>
    </div>
   </div>
   <!--Contacto-->
