--- a/daniel.html
+++ b/daniel.html
@@ -38,11 +38,11 @@
     <h3 style="font-size:14px;">info@bitlab.mx</h3>
     <form action="#">
      <div class="minform">
-     Nombre: <input type="text"></br>
-     Empresa: <input type="text"></br>
-     E-Mail: <input type="text"></br>
-     Mensaje: <input type="text"></br>
-    </div>
+      Nombre: <input type="text"></br>
+      Empresa: <input type="text"></br>
+      E-Mail: <input type="text"></br>
+      Mensaje: <input type="text"></br>
+     </div>
      <input type="submit" class="buttonform">
     </form>
    </div>
@@ -87,11 +87,11 @@
     <!--Nosotros-->
     <div class="section nosotros" style="color:white" data-anchor="us">
      <h5 style="color:white">Conoce a nuestro equipo de trabajo</h5>
-     <p class="conocenos">¿Quiénes somos?</p>
+     <h4 style="color:white; margin-top:60px">¿Quiénes somos?</h4>
      <a href="nosotros.html"><div class="buttonwhite">Ver más</div></a>
     </div>
     <!--Clientes-->
-    <div class="section clients" data-anchor="clients" style="height: 1900px;">
+    <div class="section" data-anchor="clients">
      <div class="clients">
       <p class="title-clients">Nuestros clientes</p>
       <div class="client-container">
@@ -102,23 +102,23 @@
       </div>
      </div>
      <div class="footer">
-      <div class="three">
-       <p class="footer-conocenos">Conócenos</p>
-       <p class="footer-adress"> Piedras Negras #229,
-        Col. Mitras Centro C.P. 64650</p>
-        <p class="footer-tel">+52 (81) 21392290</p>
-        <p class="footer-hola">Dinos Hola!</p>
-        <p class="footer-web">jobs@bitlab.mx</p>
+      <div class="footercontent">
+       <div class="footertitle">conócenos</div>
+       <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
        </div>
-       <div class="three">
-        <p class="footer-rights">2015 - BITLAB - All rights reserved</p>
-       </div>
-       <div class="three" style="height: 100%">
-        <a href="https://www.facebook.com/" class="footer-button" target="_blank"><img src="img/facebook.png"></a>
-       </div>
-       <div class="three"></div>
+      </div>
+      <div class="footercontent">
+       <div class="footertitle">Say hello to us</div>
+       <div class="footertext">jobs@bitlab.mx</div>
+      </div>
+      <div class="footercontent">
+       <div class="footerrights">2015 - BITLAB - All rights reserved</div>
+      </div>
+      <div class="footercontent">
+       <div class="footertitle"><a href="#"><img src="img/facebook.png"/></a></div>
       </div>
      </div>
     </div>
-   </body>
-   </html>
+   </div>
+  </body>
+  </html>
