Agrega quienes somos

--- a/nosotros.html
+++ b/nosotros.html
@@ -41,10 +41,23 @@
 			</div>
 <!--Process-->
 		<div class="section nosotroscontent" data-anchor="nosotroscontent">
-		 	<div class="center">
-		 		<h3>Consultoría sin costo ni obligaciones.</h3>
-				<h4>El camino al éxito</h4>
-				<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+		 	<div class="img-01">
+		 		<img src="img/img01.png">
+		 	</div>
+		 	<div class="right">
+		 		<h1 class="numbers">01</h1>
+				<h4>Quienes somos</h4>
+				<h3 class="text1">Conócenos un poco mas</h3>
+				<div class="text">Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
+			</div>
+			<div class="img-02">
+		 		<img src="img/img02.png">
+		 	</div>
+			<div class="left">
+		 		<h1 class="numbers">02</h1>
+				<h4>Misión</h4>
+				<h3 class="text1">Conócenos un poco mas</h3>
+				<div class="text">Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
 			</div>
 	 	</div>
 </body>
