Cambios en proceso

--- a/proceso.html
+++ b/proceso.html
@@ -38,11 +38,11 @@
     <h3 style="font-size:14px;">info@bitlab.mx</h3>
     <form action="#">
      <div class="minform">
-     Nombre: <input type="text"></br>
-     Empresa: <input type="text"></br>
-     E-Mail: <input type="text"></br>
-     Mensaje: <input type="text"></br>
-    </div>
+      Nombre: <input type="text"></br>
+      Empresa: <input type="text"></br>
+      E-Mail: <input type="text"></br>
+      Mensaje: <input type="text"></br>
+     </div>
      <input type="submit" class="buttonform">
     </form>
    </div>
@@ -58,78 +58,91 @@
   </div>
 
 
- <!--Main-->
- <div id="fullpage">
-  <div class="section mainproceso">
-   <h1>Conoce nuestro proceso de trabajo</h1>
-   <a href="#procesocontent">
-    <img class="arrow" src="img/flecha.png"/>
-   </a>
-  </div>
-  <!--Proces-->
-  <div class="section procesocontent" data-anchor="procesocontent">
-   <div class="center">
-    <h3>Consultoría sin costo ni obligaciones.</h3>
-    <h4>El camino al éxito</h4>
-    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
+  <!--Main-->
+  <div id="fullpage">
+   <div class="section mainproceso">
+    <h1>Conoce nuestro proceso de trabajo</h1>
+    <a href="#procesocontent">
+     <img class="arrow" src="img/flecha.png"/>
+    </a>
    </div>
-  </div>
-  <!--Pasos-->
-  <div class="section pasos">
-   <div class="ilust"><img src="img/descubrir.png"></div>
+   <!--Proces-->
+   <div class="section procesocontent" data-anchor="procesocontent">
+    <div class="center">
+     <h3>Consultoría sin costo ni obligaciones.</h3>
+     <h4>El camino al éxito</h4>
+     <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
+    </div>
+   </div>
+   <!--Pasos-->
+   <div class="section pasos">
+    <div class="ilust"><img src="img/descubrir.png"></div>
+    <div class="contentpasos">
+     <h1>01</h1>
+     <h4>Descubrir</h4>
+     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+    </div>
+   </br>
    <div class="contentpasos">
-    <h1>01</h1>
-    <h4>Descubrir</h4>
+    <h1>02</h1>
+    <h4>Diseñar</h4>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
    </div>
+   <div class="ilust"><img src="img/diseñar.png"></div>
   </br>
+  <div class="ilust"><img src="img/desarrollo.png"></div>
   <div class="contentpasos">
-   <h1>02</h1>
-   <h4>Diseñar</h4>
+   <h1>03</h1>
+   <h4>Desarrollar</h4>
    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
   </div>
-  <div class="ilust"><img src="img/diseñar.png"></div>
  </br>
- <div class="ilust"><img src="img/desarrollo.png"></div>
  <div class="contentpasos">
-  <h1>03</h1>
-  <h4>Desarrollar</h4>
+  <h1>04</h1>
+  <h4>Celebrar</h4>
   <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
  </div>
-</br>
-<div class="contentpasos">
- <h1>04</h1>
- <h4>Celebrar</h4>
- <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
-</div>
-<div class="ilust"><img src="img/celebrar.png"></div>
+ <div class="ilust"><img src="img/celebrar.png"></div>
 </div>
 
-<div class="section contactfull" style="height: 1900px;">
-<div class="contacttext">
- <h3>Hola</h3>
- <h4>Hola</h4>
- <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
-</div>
-<div class="footer">
- <div class="footercontent">
-  <div class="footertitle">conócenos</div>
-  <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+<div class="section contactfull">
+ <div class="contactleft">
+  <h3>Contáctanos</3>
+   <h4>say hello!</h4>
+   <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+   <h3 style="font-size:14px;">info@bitlab.mx</h3>
+   <form action="#">
+    <div class="fullform">
+     Nombre: <input type="text"></br>
+     Empresa: <input type="text"></br>
+     E-Mail: <input type="text"></br>
+     Mensaje: <input type="text"></br>
+    </div>
+    <input type="submit" class="buttonfullform">
+   </form>
   </div>
- </div>
- <div class="footercontent">
-  <div class="footertitle">Say hello to us</div>
-  <div class="footertext">jobs@bitlab.mx</div>
- </div>
- <div class="footercontent">
-  <div class="footerrights">2015 - BITLAB - All rights reserved</div>
- </div>
- <div class="footercontent">
-  <div class="footertitle"><a href="#"><img src="img/facebook.png"/></a></div>
- </div>
-</div>
-  </div>
+  <div class="contactright">
 
+  </div>
+  <div class="footer">
+   <div class="footercontent">
+    <div class="footertitle">conócenos</div>
+    <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+    </div>
+   </div>
+   <div class="footercontent">
+    <div class="footertitle">Say hello to us</div>
+    <div class="footertext">jobs@bitlab.mx</div>
+   </div>
+   <div class="footercontent">
+    <div class="footerrights">2015 - BITLAB - All rights reserved</div>
+   </div>
+   <div class="footercontent">
+    <div class="footertitle"><a href="#"><img src="img/facebook.png"/></a></div>
+   </div>
+  </div>
  </div>
+
+</div>
 </body>
 </html>
