Add who we are section

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<script src="assets/javascript/fullPageInitializer.js"></script>
@@ -41,24 +42,24 @@
 			</div>
 <!--Process-->
 		<div class="section nosotroscontent" data-anchor="nosotroscontent">
-		 	<div class="img-01">
-		 		<img src="img/img01.png">
+		 	<div class="row">
+		 		<div class="image"></div>
+		 		<div class="text">
+		 			<h1>01</h1>
+					<h4>Quienes somos</h4>
+					<h3>Conócenos un poco mas</h3>
+					<div>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
+		 		</div>
 		 	</div>
-		 	<div class="right">
-		 		<h1 class="numbers">01</h1>
-				<h4>Quienes somos</h4>
-				<h3 class="text1">Conócenos un poco mas</h3>
-				<div class="text">Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
-			</div>
-			<div class="img-02">
-		 		<img src="img/img02.png">
+		 	<div class="row">
+		 		<div class="text">
+		 			<h1>01</h1>
+					<h4>Quienes somos</h4>
+					<h3>Conócenos un poco mas</h3>
+					<div>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
+		 		</div>
+		 		<div class="image"></div>
 		 	</div>
-			<div class="left">
-		 		<h1 class="numbers">02</h1>
-				<h4>Misión</h4>
-				<h3 class="text1">Conócenos un poco mas</h3>
-				<div class="text">Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</div>
-			</div>
 	 	</div>
 </body>
 </html>
